--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -41,9 +41,26 @@
   }
 </style>
 
-<button></button>
+<button>Btn</button>
 <script>
+  const divs = document.querySelectorAll('div');
+  const button = document.querySelector('button');
 
+  function logText(e) {
+    console.log(this.classList.value);
+    e.stopPropagation(); // stop bubbling!
+  }
+
+  divs.forEach(div => div.addEventListener('click', logText, {
+    capture: false, // capture down bubbling up
+    once: false // unbind it after clicking once
+  }));
+
+  button.addEventListener('click', () => {
+    console.log("click!!!");
+  }, {
+    once: true
+  });
 </script>
 </body>
 </html>
